# eth2dgraph

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
dgraph/: bulk-import.bash  contracts.schema  live-import.sh  schema.graphql
res/: erc20.json  erc721.json
src/: main.rs
src/analysys/: lifetimes.rs  mod.rs  similarities.rs
src/extraction/: blocks.rs  extract.rs  logs.rs  mod.rs  stream.rs  traces.rs  writer.rs
src/models/: abi.rs  block.rs  contract_deployment.rs  contract_destruction.rs  error.rs  event.rs  function.rs  log.rs  mod.rs  skeleton.rs  tests.rs  trace.rs  transaction.rs  transfer.rs
src/utils/: decompile.rs  metadata.rs  mod.rs  skeleton.rs
test-data/: bytecodes.csv  bytecodes_skeleton.csv
