
[package]
name = "eth2dgraph"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
primitive-types = { version = "0.11.1", default-features = false, features = ["serde_no_std", "rustc-hex"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version="1.0.91", features = ["preserve_order"] }
num_cpus = "1.15.0"
tokio = { version="1.24.2", features=["sync", "macros", "fs", "io-util", "rt-multi-thread", "process", "time", "signal"] }
ethers = { version="2.0.4", features=["abigen", "rustls", "ws" ] }
reqwest = "0.11.14"
dgraph-tonic = { version="0.11", features=["experimental"] }
ethabi = "18.0.0"
flate2 ="1.0.25"
chrono = "0.4.24"
regex = "1.7.3"
lazy_static = "1.4.0"
serde_cbor = "0.11.2"
failure = "0.1.8"
futures = "0.3.28"
rayon = "1.7.0"
clap = { version = "4.2.2", features = ["derive"] }
glob = "0.3.1"
anyhow = "1.0.71"
bincode = "1.3.3"
plotters = "0.3.4"
ethers-core = "2.0.7"
dashmap = "5.4.0"
tracing = "0.1"
